--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "aiocatalogs",
   "version": "1.1.2-beta.1",
   "description": "AIOCatalogs is an open-source addon that combines multiple catalog addons into a single one with enhanced performance and a user-friendly configuration interface. It features multi-platform compatibility, serverless deployment options, and an optimized caching system. Join our community on Discord (discord.gg/Ma4SnagqwE) or contribute on GitHub (github.com/panteLx/aiocatalogs)",
-  "main": "dist/addon/server.js",
+  "main": "dist/cloudflare/index.js",
   "scripts": {
-    "start": "node dist/addon/server.js",
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only packages/addon/server.ts",
-    "dev:cf": "wrangler dev",
-    "deploy:cf": "npm run build && wrangler deploy",
-    "preview:cf": "npm run build && wrangler versions upload",
+    "dev": "wrangler dev",
+    "deploy": "npm run build && wrangler deploy",
+    "preview": "npm run build && wrangler versions upload",
     "test": "vitest run --passWithNoTests",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -36,23 +34,16 @@
   },
   "homepage": "https://github.com/panteLx/aiocatalogs#readme",
   "dependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.15",
-    "@types/node-fetch": "^2.6.12",
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0",
     "hono": "^3.12.12",
-    "node-fetch": "^2.7.0",
-    "stremio-addon-sdk": "^1.6.10",
-    "toastify-js": "^1.12.0",
-    "ts-node": "^10.9.2"
+    "stremio-addon-sdk": "^1.6.10"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230914.0",
+    "@types/node": "^22.15.15",
     "@vitest/coverage-v8": "^3.1.3",
     "bumpp": "^10.1.0",
     "prettier": "^3.3.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3",
