chore: refactor project structure and update main entry points
- Updated main entry in package.json to point to the new directory structure.
- Added project structure section to README for better clarity.
- Adjusted tsconfig.json to reflect new root directory and include templates.
- Updated wrangler.toml to align with the new file paths.
- Removed outdated Cloudflare-specific files and directories to streamline the codebase.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aiocatalogs",
   "version": "1.1.2-beta.1",
   "description": "AIOCatalogs is an open-source addon that combines multiple catalog addons into a single one with enhanced performance and a user-friendly configuration interface. It features multi-platform compatibility, serverless deployment options, and an optimized caching system. Join our community on Discord (discord.gg/Ma4SnagqwE) or contribute on GitHub (github.com/panteLx/aiocatalogs)",
-  "main": "dist/cloudflare/index.js",
+  "main": "dist/platforms/cloudflare/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "wrangler dev",
