--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "npm run build && wrangler deploy",
     "preview": "npm run build && wrangler versions upload",
     "test": "vitest run --passWithNoTests",
+    "test:coverage": "vitest run --coverage",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
@@ -39,14 +40,11 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230914.0",
-    "@types/node": "^22.15.15",
     "@vitest/coverage-v8": "^3.1.3",
     "bumpp": "^10.1.0",
     "prettier": "^3.3.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3",
-    "wrangler": "^3.15.0"
+    "wrangler": "^4.14.4"
   }
 }
