--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,8 +9,8 @@ compatibility_flags = ["nodejs_compat", "nodejs_compat_populate_process_env"]
 enabled = true
 head_sampling_rate = 1 
 
-[vars]
-PORT = "8787"
+[dev]
+port = 8787
 
 [[d1_databases]]
 binding = "DB"
