feat: enhance logging capabilities and configuration in wrangler.toml and core modules

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,6 +18,10 @@ head_sampling_rate = 1
 [vars]
 AIOCATALOGS_API_RATE_LIMIT = true
 AIOCATALOGS_API_MAX_REQUESTS = 50 # requests per minute
+LOG_LEVEL = "info" # debug, info, warn, error, or none
+LOG_ENABLE_TIMESTAMPS = true
+LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
+LOG_TIMEZONE = "Europe/Berlin"
 
 # D1-Database for the production environment
 [[d1_databases]]
@@ -34,6 +38,10 @@ migrations_dir = "./packages/platforms/cloudflare/migrations"
 [env.dev.vars]
 AIOCATALOGS_API_RATE_LIMIT = false
 AIOCATALOGS_API_MAX_REQUESTS = 5 # requests per minute
+LOG_LEVEL = "debug" # debug, info, warn, error, or none
+LOG_ENABLE_TIMESTAMPS = true
+LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
+LOG_TIMEZONE = "Europe/Berlin"
 
 # D1-Database for the development environment
 [[env.dev.d1_databases]]
