feat: add maxItemsMDBList configuration for MDBList API
- Introduced `AIOCATALOGS_API_MAX_ITEMS_MDBLIST` variable in `wrangler.toml` for controlling the maximum number of items fetched from the MDBList API.
- Updated `fetchListItems` function to utilize the new configuration for dynamic item fetching limits.
- Enhanced `appConfig` to include `maxItemsMDBList` with a default value of 100.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,6 +18,8 @@ head_sampling_rate = 1
 [vars]
 AIOCATALOGS_API_RATE_LIMIT = true
 AIOCATALOGS_API_MAX_REQUESTS = 50 # requests per minute
+AIOCATALOGS_API_MAX_ITEMS_MDBLIST = 100 # maximum number of items fetched from MDBList API
+
 LOG_LEVEL = "info" # debug, info, warn, error, or none
 LOG_ENABLE_TIMESTAMPS = true
 LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
@@ -38,6 +40,8 @@ migrations_dir = "./packages/platforms/cloudflare/migrations"
 [env.dev.vars]
 AIOCATALOGS_API_RATE_LIMIT = false
 AIOCATALOGS_API_MAX_REQUESTS = 5 # requests per minute
+AIOCATALOGS_API_MAX_ITEMS_MDBLIST = 10 # maximum number of items fetched from MDBList API
+
 LOG_LEVEL = "debug" # debug, info, warn, error, or none
 LOG_ENABLE_TIMESTAMPS = true
 LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
