feat: integrate Discord logging for error reporting and configuration

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -28,6 +28,10 @@ LOG_ENABLE_TIMESTAMPS = true
 LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
 LOG_TIMEZONE = "Europe/Berlin"
 
+# DISCORD_WEBHOOK_URL = "" # Add encrypted value to your Cloudflare worker instance
+DISCORD_BOT_NAME = "AIOCatalogs - Error Logger" # Optional: Custom name for the bot
+DISCORD_BOT_AVATAR = "https://i.imgur.com/fRPYeIV.png" # Optional: Custom avatar URL
+
 # D1-Database for the production environment
 [[d1_databases]]
 binding = "DB"
@@ -52,6 +56,10 @@ LOG_LEVEL = "debug" # debug, info, warn, error, or none
 LOG_ENABLE_TIMESTAMPS = true
 LOG_TIMESTAMP_FORMAT = "dd.MM.yyyy HH:mm:ss"
 LOG_TIMEZONE = "Europe/Berlin"
+
+# DISCORD_WEBHOOK_URL = "" # Add encrypted value to your Cloudflare worker instance
+DISCORD_BOT_NAME = "AIOCatalogs - Error Logger" # Optional: Custom name for the bot
+DISCORD_BOT_AVATAR = "https://i.imgur.com/fRPYeIV.png" # Optional: Custom avatar URL
 
 # D1-Database for the development environment
 [[env.dev.d1_databases]]
