chore: update migration scripts and configuration for Cloudflare D1 integration

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "db:check": "pnpm with-env drizzle-kit check",
     "db:studio": "pnpm with-env drizzle-kit studio",
     "db:studio:local": "pnpm with-env pnpm with-local-db drizzle-kit studio --config drizzle.local.config.ts",
-    "d1:migrate:local": "wrangler d1 migrations apply prod-d1 --local",
-    "d1:migrate:remote": "wrangler d1 migrations apply prod-d1 --remote",
+    "d1:migrate:local": "wrangler d1 migrations apply aiocatalogs-v2 --local",
+    "d1:migrate:remote": "wrangler d1 migrations apply aiocatalogs-v2 --remote",
     "dev": "pnpm with-env next dev",
     "build": "pnpm with-env next build",
     "lint": "pnpm with-env next lint",
