--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -1,22 +1,53 @@
+#:schema node_modules/wrangler/config-schema.json
+# For more details on how to configure Wrangler, refer to:
+# https://developers.cloudflare.com/workers/wrangler/configuration/
 name = "aiocatalogs-v2"
-compatibility_date = "2024-09-23"
-compatibility_flags = ["nodejs_compat"]
-main = ".open-next/worker.js"
-workers_dev = false
-
-[observability]
-enabled = true
-head_sampling_rate = 1 
-
-[placement]
-mode = "smart"
+main = ".worker-next/index.mjs"
+compatibility_date = "2024-09-26"
+compatibility_flags = [ "nodejs_compat" ]
+minify = true
+workers_dev = true
 
 [assets]
-directory = ".open-next/assets"
+directory = ".worker-next/assets"
 binding = "ASSETS"
 
-[[ d1_databases ]]
+[[d1_databases]]
 binding = "DB"
 database_name = ""
 database_id = ""
-migrations_dir = "migrations"
+
+[observability]
+enabled = true
+
+# Smart Placement
+# Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
+[placement]
+mode = "smart"
+
+###
+# Bindings
+# Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
+# databases, object storage, AI inference, real-time communication and more.
+# https://developers.cloudflare.com/workers/runtime-apis/bindings/
+###
+
+# Environment Variables
+# https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
+# [vars]
+# MY_VARIABLE = "production_value"
+
+# Note: Use secrets to store sensitive data.
+# https://developers.cloudflare.com/workers/configuration/secrets/
+
+# Static Assets
+# https://developers.cloudflare.com/workers/static-assets/binding/
+# [assets]
+# directory = "./public/"
+# binding = "ASSETS"
+
+# Service Bindings (communicate between multiple Workers)
+# https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
+# [[services]]
+# binding = "MY_SERVICE"
+# service = "my-service"
