--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.4",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
