--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.1",
     "lucide-react": "^0.511.0",
+    "nanoid": "^5.1.5",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
