--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -34,11 +34,13 @@ mode = "smart"
 
 # Environment Variables
 # https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+GITHUB_REPO_OWNER=""
+GITHUB_REPO_NAME=""
 
 # Note: Use secrets to store sensitive data.
 # https://developers.cloudflare.com/workers/configuration/secrets/
+# Add GITHUB_TOKEN variable as a secret with `wrangler secret put GITHUB_TOKEN`
 
 # Static Assets
 # https://developers.cloudflare.com/workers/static-assets/binding/
