--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.57.0",
+    "react-markdown": "^10.1.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.4",
     "superjson": "^2.2.1",
