--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
-  "name": "workers-d1",
-  "version": "0.1.0",
+  "name": "aiocatalogs",
+  "version": "2.0.0",
+  "description": "AIOCatalogs is an open-source addon that combines multiple catalog addons into a single one with enhanced performance and a user-friendly configuration interface. It features multi-platform compatibility, serverless deployment options, and an optimized caching system. Join our community on Discord (discord.gg/Ma4SnagqwE) or contribute on GitHub (github.com/panteLx/aiocatalogs)",
   "private": true,
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/panteLx/aiocatalogs.git"
+  },
+  "keywords": [
+    "stremio",
+    "addon",
+    "catalogs"
+  ],
+  "author": "panteLx",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/panteLx/aiocatalogs/issues"
+  },
+  "homepage": "https://github.com/panteLx/aiocatalogs#readme",
   "scripts": {
     "db:up": "pnpm with-env drizzle-kit up",
     "db:generate": "pnpm with-env drizzle-kit generate",
