chore: expand keywords in package.json for improved discoverability

--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "keywords": [
     "stremio",
     "addon",
-    "catalogs"
+    "catalogs",
+    "catalog",
+    "streaming",
+    "movies",
+    "series",
+    "media",
+    "entertainment",
+    "unified catalog",
+    "catalog manager",
+    "stremio addons",
+    "streaming catalogs"
   ],
   "author": "panteLx",
   "license": "MIT",
