--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,9 @@ permissions:
   contents: read
 
 jobs:
+  ci:
+    uses: ./.github/workflows/test.yml
+
   validate:
     name: Validate PR
     runs-on: ubuntu-latest
@@ -20,27 +23,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.5.0
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "23.x"
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
       - name: Validate PR title
         uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: Build check
-        run: pnpm run build
