--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test and Release on GitHub
+name: Release
 
 on:
   push:
@@ -7,35 +7,7 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        node-version: [20.x, 21.x, 22.x, 23.x]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.5.0
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: Build
-        run: pnpm run build
-
-      # - name: Run tests
-      #   run: pnpm run test
+    uses: ./.github/workflows/test.yml
 
   git-release:
     needs: test
