--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,47 @@
-# name: Test
+name: CI
 
-# on:
-#   pull_request:
-#     branches: ["main"]
-#   push:
-#     branches: ["main"]
+on:
+  pull_request:
+    branches: ["main"]
+  push:
+    branches: ["main"]
+  workflow_call:
+    outputs:
+      build-success:
+        description: "Whether the build was successful"
+        value: ${{ jobs.test.outputs.build-success }}
 
-# jobs:
-#   test:
-#     strategy:
-#       matrix:
-#         node-version: [20.x, 21.x, 22.x, 23.x]
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
+jobs:
+  test:
+    strategy:
+      matrix:
+        node-version: [20.x, 22.x, 23.x]
+    runs-on: ubuntu-latest
+    outputs:
+      build-success: ${{ steps.build.outcome == 'success' }}
+    steps:
+      - uses: actions/checkout@v4
 
-#       - name: Use Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#           cache: "npm"
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.5.0
 
-#       - name: Install dependencies
-#         run: npm ci
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
 
-#       - name: Build packages
-#         run: npm run build
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
-#       - name: Run tests
-#         run: npm run test
+      - name: Lint
+        run: pnpm run lint
+
+      - name: Build
+        id: build
+        run: pnpm run build
+
+      # - name: Run tests
+      #   run: pnpm run test
