--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -35,6 +35,8 @@ mode = "smart"
 # Environment Variables
 # https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 [vars]
+NEXT_PUBLIC_GITHUB_INCLUDE_PRERELEASE="true"
+NEXT_PUBLIC_GITHUB_SHOW_VIEW_ON_GITHUB_BUTTON="true"
 GITHUB_REPO_OWNER=""
 GITHUB_REPO_NAME=""
 MDBLIST_MANIFEST_URL="https://1fe84bc728af-stremio-mdblist.baby-beamup.club"
