feat: integrate Clerk for user authentication and authorization
- Implement user authentication using Clerk in the application.
- Replace the dashboard page with userId-based routing for better user experience.
- Add user creation logic upon authentication if the user does not exist.
- Update the home page to display a welcome message and redirect to the user's dashboard.
- Remove existing user modal and streamline user actions for sign-in and sign-up.
- Enhance navigation with Clerk's user button for signed-in users.
- Introduce an AuthRedirect component to handle automatic redirection after sign-in.
- Update global styles and animations for a more engaging UI experience.
- Refactor user actions to simplify user creation and validation logic.
- Add server-side authentication utilities for protecting routes and components.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "with-local-db": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit)"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.21.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-hover-card": "^1.1.14",
