--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -2,6 +2,10 @@ CLOUDFLARE_ACCOUNT_ID='x'
 CLOUDFLARE_D1_DATABASE_ID='x'
 CLOUDFLARE_TOKEN='x'
 
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=xxxx
+CLERK_SECRET_KEY=xxxx
+
 # GitHub Repository Configuration for Changelog
 NEXT_PUBLIC_GITHUB_INCLUDE_PRERELEASE='true'
 NEXT_PUBLIC_GITHUB_SHOW_VIEW_ON_GITHUB_BUTTON='true'
