--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -37,6 +37,7 @@ mode = "smart"
 [vars]
 NEXT_PUBLIC_GITHUB_INCLUDE_PRERELEASE="true"
 NEXT_PUBLIC_GITHUB_SHOW_VIEW_ON_GITHUB_BUTTON="true"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="xxxx"
 GITHUB_REPO_OWNER=""
 GITHUB_REPO_NAME=""
 MDBLIST_MANIFEST_URL="https://1fe84bc728af-stremio-mdblist.baby-beamup.club"
@@ -44,6 +45,7 @@ MDBLIST_MANIFEST_URL="https://1fe84bc728af-stremio-mdblist.baby-beamup.club"
 # Note: Use secrets to store sensitive data.
 # https://developers.cloudflare.com/workers/configuration/secrets/
 # Add GITHUB_TOKEN variable as a secret with `wrangler secret put GITHUB_TOKEN`
+# Add CLERK_SECRET_KEY variable as a secret with `wrangler secret put CLERK_SECRET_KEY`
 
 # Static Assets
 # https://developers.cloudflare.com/workers/static-assets/binding/
