chore: update .gitignore and environment configuration for production variables

--- a/package.json
+++ b/package.json
@@ -30,28 +30,29 @@
   },
   "homepage": "https://github.com/panteLx/aiocatalogs#readme",
   "scripts": {
-    "db:up": "pnpm with-env drizzle-kit up",
-    "db:generate": "pnpm with-env drizzle-kit generate",
-    "db:push": "pnpm with-env drizzle-kit push",
-    "db:push:local": "pnpm with-env pnpm with-local-db drizzle-kit push --config drizzle.local.config.ts",
-    "db:migrate": "pnpm with-env drizzle-kit migrate",
-    "db:migrate:local": "pnpm with-env pnpm with-local-db drizzle-kit migrate --config drizzle.local.config.ts",
-    "db:check": "pnpm with-env drizzle-kit check",
-    "db:studio": "pnpm with-env drizzle-kit studio",
-    "db:studio:local": "pnpm with-env pnpm with-local-db drizzle-kit studio --config drizzle.local.config.ts",
+    "db:up": "pnpm with-dev-env drizzle-kit up",
+    "db:generate": "pnpm with-dev-env drizzle-kit generate",
+    "db:push": "pnpm with-prod-env drizzle-kit push",
+    "db:push:local": "pnpm with-dev-env pnpm with-local-db drizzle-kit push --config drizzle.local.config.ts",
+    "db:migrate": "pnpm with-prod-env drizzle-kit migrate",
+    "db:migrate:local": "pnpm with-dev-env pnpm with-local-db drizzle-kit migrate --config drizzle.local.config.ts",
+    "db:check": "pnpm with-dev-env drizzle-kit check",
+    "db:studio": "pnpm with-prod-env drizzle-kit studio",
+    "db:studio:local": "pnpm with-dev-env pnpm with-local-db drizzle-kit studio --config drizzle.local.config.ts",
     "d1:migrate:local": "wrangler d1 migrations apply aiocatalogs-v2 --local",
     "d1:migrate:remote": "wrangler d1 migrations apply aiocatalogs-v2 --remote",
-    "dev": "pnpm with-env next dev",
-    "build": "pnpm with-env next build",
-    "lint": "pnpm with-env next lint",
+    "dev": "pnpm with-dev-env next dev",
+    "build": "pnpm with-prod-env next build",
+    "lint": "pnpm with-prod-env next lint",
     "dev:worker": "wrangler dev",
-    "build:worker": "pnpm with-env cloudflare",
+    "build:worker": "pnpm with-prod-env cloudflare",
     "preview": "pnpm build:worker && wrangler versions upload",
     "deploy": "pnpm build:worker && wrangler deploy",
     "release": "bumpp",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
     "bindings": "cf-bindings-proxy",
-    "with-env": "dotenv -e .dev.vars --",
+    "with-dev-env": "dotenv -e .dev.vars --",
+    "with-prod-env": "dotenv -e .prod.vars --",
     "with-local-db": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit)"
   },
   "dependencies": {
